updated all for jai

--- a/wp-content/themes/manic-offshore-theme/css/page_home.less
+++ b/wp-content/themes/manic-offshore-theme/css/page_home.less
@@ -478,9 +478,12 @@ body.home{
 //    \____\___/|_| \_\_|    \___/|_| \_\/_/   \_\_| |_____| |____/ \___/|_____\___/  |_| |___\___/|_| \_|____/ 
 //                                                                                                              
 
-.homepage-corporate-solutions-column{
-  padding-left: 40px;
+.home-page {
+  .homepage-corporate-solutions-column{
+    padding-left: 40px;
+  }  
 }
+
 
 
 #homepage-corporate-solutions-row{
