--- a/wp-content/themes/manic-offshore-theme/css/sub_pages.less
+++ b/wp-content/themes/manic-offshore-theme/css/sub_pages.less
@@ -587,6 +587,7 @@ form.wpcf7-form {
 
 .company-list {
 	li {
+		margin-bottom: 0px !important;
 		a {
 			color: @grey;
 			text-decoration: underline;
