--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -318,6 +318,9 @@
     display: block;
     color: red;
   }
+  #field_53_0 {
+    display: inline-block!important;
+  }
   #mobile-telephone {
     visibility: hidden;
     position: absolute;
@@ -642,6 +645,7 @@ input.error, textarea.error {
   }
   label#tnc-error, label#company_name_choice_3-error, #company_name_choice_2-error, #company_name_choice_1-error {
     margin-left: 10px;
+    width: auto;
   }
   .half-field-container {
     width: 70%;
@@ -901,4 +905,8 @@ input.custom-input-class{
   &:-ms-input-placeholder{
     color: lighten(#767676, 20%);
   }
+}
+
+.white-space-pre {
+    white-space: pre-wrap;
 }
