--- a/wp-content/themes/manic-offshore-theme/css/header.less
+++ b/wp-content/themes/manic-offshore-theme/css/header.less
@@ -188,6 +188,10 @@
     display: block;
   }
 
+  .ajax-error {
+    color: red!important;
+  }
+
   a#forgot-password-link{
     display: block;
     margin-top: 19px;
