--- a/wp-content/themes/manic-offshore-theme/css/style.css
+++ b/wp-content/themes/manic-offshore-theme/css/style.css
@@ -553,6 +553,9 @@ header.mkdf-page-header .mkdf-menu-area .mkdf-vertical-align-containers > .mkdf-
 #custom-right-header-signin-box form {
   display: block;
 }
+#custom-right-header-signin-box .ajax-error {
+  color: red!important;
+}
 #custom-right-header-signin-box a#forgot-password-link {
   display: block;
   margin-top: 19px;
@@ -1126,6 +1129,9 @@ footer .widget .mkdf-icon-list-item:hover p {
   display: block;
   color: red;
 }
+.field-container #field_53_0 {
+  display: inline-block !important;
+}
 .field-container #mobile-telephone {
   visibility: hidden;
   position: absolute;
@@ -1421,6 +1427,7 @@ textarea.error:-ms-input-placeholder {
 #registration-page-form-4 #company_name_choice_2-error,
 #registration-page-form-4 #company_name_choice_1-error {
   margin-left: 10px;
+  width: auto;
 }
 #registration-page-form-4 .half-field-container {
   width: 70%;
@@ -1666,6 +1673,9 @@ input.custom-input-class::-moz-placeholder {
 }
 input.custom-input-class:-ms-input-placeholder {
   color: #a9a9a9;
+}
+.white-space-pre {
+  white-space: pre-wrap;
 }
 body.home .forcefullwidth_wrapper_tp_banner {
   height: 420px !important;
@@ -2038,6 +2048,9 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   -o-transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
   transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1) 0s;
 }
+.homepage-corporate-solutions-column .mkdf-blog-list .mkdf-blog-list-item .mkdf-item-text-holder-2:before {
+  background: #008b9b !important;
+}
 .homepage-corporate-solutions-column .mkdf-blog-list .mkdf-blog-list-item:hover .mkdf-item-text-holder:before {
   -moz-opacity: 1;
   -khtml-opacity: 1;
@@ -2045,6 +2058,14 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   opacity: 1;
   -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
   filter: alpha(opacity=100);
+}
+.homepage-corporate-solutions-column .mkdf-blog-list .mkdf-blog-list-item:hover .mkdf-item-text-holder-2 .mkdf-excerpt {
+  -moz-opacity: 0;
+  -khtml-opacity: 0;
+  -webkit-opacity: 0;
+  opacity: 0;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+  filter: alpha(opacity=0);
 }
 .homepage-corporate-solutions-column .mkdf-blog-list .mkdf-blog-list-item:hover .mkdf-excerpt {
   -moz-opacity: 1;
@@ -2352,6 +2373,7 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   margin: 0;
   list-style: none;
   position: relative;
+  text-align: center;
 }
 .company-chart ul a {
   display: block;
@@ -2381,14 +2403,6 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   margin-top: -3px;
   display: block;
 }
-.company-chart .big-company > li > a {
-  width: 37%;
-  height: 170px;
-  margin: 0 auto 60px auto;
-}
-.company-chart .big-company-2 > li > a {
-  height: 170px;
-}
 .company-chart .big-company:after {
   content: "";
   display: block;
@@ -2401,17 +2415,407 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   left: 50.3%;
   margin-left: -4px;
 }
-.company-chart .companies {
+.company-chart .big-company > li > a {
+  width: 37%;
+  height: 170px;
+  margin: 0 auto 60px auto;
+}
+.company-chart .big-company-2 > li > a {
+  height: 170px;
+}
+.company-chart .big-company-3:after {
+  left: 50.2%;
+  top: auto;
+  bottom: 186px;
+}
+.company-chart .big-company-3 > li:nth-of-type(1) {
+  display: inline-block;
+  width: 30%;
+  margin-right: 20%;
+}
+.company-chart .big-company-3 > li:nth-of-type(1) a {
+  width: 100%;
+}
+.company-chart .big-company-3 > li:nth-of-type(1) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 116px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -36px;
+  left: 81%;
+  margin-left: 0px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-3 > li:nth-of-type(1) .arrow span {
+  position: absolute;
+  top: 26px;
+  right: 11px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-3 > li:nth-of-type(1) .arrow .arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  position: absolute;
+  right: -8px;
+  bottom: -2px;
+}
+.company-chart .big-company-3 > li:nth-of-type(2) {
+  display: inline-block;
+  width: 30%;
+}
+.company-chart .big-company-3 > li:nth-of-type(2) a {
+  width: 100%;
+}
+.company-chart .big-company-3 > li:nth-of-type(2) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 116px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -36px;
+  left: 18%;
+  margin-left: 0px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-3 > li:nth-of-type(2) .arrow span {
+  position: absolute;
+  top: -25px;
+  left: 60px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-3 > li:nth-of-type(2) .arrow .arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  position: absolute;
+  left: -12px;
+  bottom: -3px;
+}
+.company-chart .big-company-4:after {
+  left: 50.2%;
+  top: auto;
+  bottom: 186px;
+}
+.company-chart .big-company-4 > li:nth-of-type(1) {
+  width: 30%;
+  margin-left: 10%;
+}
+.company-chart .big-company-4 > li:nth-of-type(1) a {
+  width: 100%;
+}
+.company-chart .big-company-4 > li:nth-of-type(1) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 62px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -62px;
+  left: 48%;
+  margin-left: 0px;
+}
+.company-chart .big-company-4 > li:nth-of-type(2) {
+  display: inline-block;
+  width: 30%;
+  margin-right: 20%;
+}
+.company-chart .big-company-4 > li:nth-of-type(2) a {
+  width: 100%;
+}
+.company-chart .big-company-4 > li:nth-of-type(2) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 116px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -36px;
+  left: 81%;
+  margin-left: 0px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-4 > li:nth-of-type(2) .arrow span {
+  position: absolute;
+  top: 26px;
+  right: 11px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-4 > li:nth-of-type(2) .arrow .arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  position: absolute;
+  right: -8px;
+  bottom: -2px;
+}
+.company-chart .big-company-4 > li:nth-of-type(3) {
+  display: inline-block;
+  width: 30%;
+}
+.company-chart .big-company-4 > li:nth-of-type(3) a {
+  width: 100%;
+}
+.company-chart .big-company-4 > li:nth-of-type(3) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 116px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -36px;
+  left: 18%;
+  margin-left: 0px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-4 > li:nth-of-type(3) .arrow span {
+  position: absolute;
+  top: 23px;
+  left: 14px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-4 > li:nth-of-type(3) .arrow .arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  position: absolute;
+  left: -12px;
+  bottom: -3px;
+}
+.company-chart .big-company-5:after {
+  display: none!important;
+}
+.company-chart .big-company-5 > li:nth-of-type(1) {
+  display: inline-block;
+  width: 30%;
+  margin-right: 20%;
+}
+.company-chart .big-company-5 > li:nth-of-type(1) a {
+  width: 100%;
+}
+.company-chart .big-company-5 > li:nth-of-type(1) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 111px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -31px;
+  left: 82%;
+  margin-left: 0px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-5 > li:nth-of-type(1) .arrow span {
+  position: absolute;
+  top: 36px;
+  right: 15px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-5 > li:nth-of-type(1) .arrow .arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+  position: absolute;
+  right: -8px;
+  bottom: -7px;
+}
+.company-chart .big-company-5 > li:nth-of-type(2) {
+  display: inline-block;
+  width: 30%;
+}
+.company-chart .big-company-5 > li:nth-of-type(2) a {
+  width: 100%;
+}
+.company-chart .big-company-5 > li:nth-of-type(2) .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 110px;
+  border-left: 4px solid #000;
+  z-index: 1;
+  bottom: -38px;
+  left: 43px;
+  margin-left: 0px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-5 > li:nth-of-type(2) .arrow span {
+  position: absolute;
+  top: 25px;
+  left: 7px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-5 > li:nth-of-type(2) .arrow .arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid black;
+  position: absolute;
+  left: -12px;
+  top: -9px;
+}
+.company-chart .big-company-5 > li ul.companies:after {
+  display: none!important;
+}
+.company-chart .big-company-5 > li ul.companies li.company:before {
+  display: none!important;
+}
+.company-chart .big-company-5 > li ul.companies li.company .arrow {
+  display: block;
+  position: absolute;
+  width: 0;
+  border-left: 4px solid #000;
+  z-index: 1;
+  margin-left: 0px;
+}
+.company-chart .big-company-5 > li ul.companies li.company .arrow span {
+  position: absolute;
+}
+.company-chart .big-company-5 > li ul.companies li.company .arrow .arrow-up {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid black;
+}
+.company-chart .big-company-5 > li ul.companies li.company .arrow .arrow-down {
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid black;
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(1) .arrow {
+  height: 110px;
+  top: -98px;
+  left: 87%;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(1) .arrow span {
+  top: 70px;
+  left: -50px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(1) .arrow .arrow-down {
+  position: absolute;
+  right: -7px;
+  bottom: -9px;
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(2) .arrow {
+  height: 50px;
+  top: -60px;
+  left: 50%;
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(2) .arrow span {
+  top: 10px;
+  left: 10px;
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(2) .arrow .arrow-down {
+  position: absolute;
+  right: -8px;
+  bottom: -10px;
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(3) .arrow {
+  height: 112px;
+  top: -92px;
+  left: 17px;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform: rotate(-40deg);
+  -o-transform: rotate(-40deg);
+  -ms-transform: rotate(-40deg);
+  transform: rotate(-40deg);
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(3) .arrow span {
+  top: 65px;
+  left: 10px;
+  -webkit-transform: rotate(40deg);
+  -moz-transform: rotate(40deg);
+  -o-transform: rotate(40deg);
+  -ms-transform: rotate(40deg);
+  transform: rotate(40deg);
+}
+.company-chart .big-company-5 > li ul.companies li.company:nth-of-type(3) .arrow .arrow-up {
+  position: absolute;
+  right: -8px;
+  top: -4px;
+}
+.company-chart ul.companies {
   margin: 0 auto;
   text-align: center;
   width: 100%;
   padding-left: 0px;
   margin-left: -9px;
 }
-.company-chart .companies-2 {
-  margin-left: 0px;
-}
-.company-chart .companies:after {
+.company-chart ul.companies:after {
   content: "";
   display: block;
   position: absolute;
@@ -2422,7 +2826,10 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   top: -22px;
   left: 25%;
 }
-.company-chart .companies-2:after {
+.company-chart ul.companies-2 {
+  margin-left: 0px;
+}
+.company-chart ul.companies-2:after {
   content: "";
   display: block;
   position: absolute;
@@ -2433,7 +2840,24 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   top: -22px;
   left: 15%;
 }
-.company-chart .company:before {
+.company-chart ul.compaines-3:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 52.2%;
+  height: 22px;
+  border-top: 4px solid #000;
+  margin: 0 auto;
+  top: -22px;
+  left: 25%;
+}
+.company-chart li.company {
+  width: 23%;
+  display: inline-block;
+  margin-bottom: 60px;
+  margin-left: 21px;
+}
+.company-chart li.company:before {
   content: "";
   display: block;
   position: absolute;
@@ -2445,18 +2869,12 @@ body.home #homepage-core-services-01 .mkdf-blog-box-whole-content .mkdf-boxes-it
   left: 50%;
   margin-left: -4px;
 }
-.company-chart .company {
-  width: 23%;
-  display: inline-block;
-  margin-bottom: 60px;
-  margin-left: 21px;
-}
-.company-chart .company-2 {
-  width: 21%;
-}
-.company-chart .company > a {
+.company-chart li.company > a {
   margin: 0 0 -26px -4px;
   z-index: 1;
+}
+.company-chart li.company-2 {
+  width: 21%;
 }
 .circle-container {
   text-align: center;
