--- a/wp-content/themes/manic-offshore-theme/css/sub_pages.less
+++ b/wp-content/themes/manic-offshore-theme/css/sub_pages.less
@@ -355,6 +355,7 @@
 	  margin: 0;
 	  list-style: none;   
 	  position: relative;
+	  text-align: center;
 	  a {
 			display: block;
 			background: @dark-blue;
@@ -382,91 +383,485 @@
 		}
 	}
 
-	.big-company > li > a {
-	  width: 37%;
-	  height: 170px;
-	  margin: 0 auto 60px auto;
+	.big-company {
+		&:after {
+		    content: "";
+		    display: block;
+		    position: absolute;
+		    width: 0;
+		    height: 38px;
+		    border-left: 4px solid #000;
+		    z-index: 1;
+		    top: 170px;
+		    left: 50.3%;
+		    margin-left: -4px;
+		}
+		> li {
+			> a {
+			  width: 37%;
+			  height: 170px;
+			  margin: 0 auto 60px auto;
+			}
+		}
 	}
 
-	.big-company-2 > li > a {
-		// width: 40%;
-		height: 170px;
+	.big-company-2 {
+		> li {
+			> a {
+				height: 170px;
+			}
+		}
+	}
+		
+	.big-company-3 {
+		&:after {
+			left: 50.2%;
+			top: auto;
+		    bottom: 186px;
+		}
+		> li {
+			&:nth-of-type(1) {
+				display: inline-block;
+				width: 30%;
+				margin-right: 20%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+					display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 116px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+			        bottom: -36px;
+					left: 81%;
+				    margin-left: 0px;
+				    .rotation(-40deg);
+					span {
+						position: absolute;
+					    top: 26px;
+    					right: 11px;
+						.rotation(40deg);
+					}
+					// &:after {
+					// 	content: "";
+					// }
+					.arrow-down {
+					  	width: 0; 
+					  	height: 0; 
+				      	border-left: 10px solid transparent;
+					    border-right: 10px solid transparent;
+					    border-top: 10px solid black;
+					    position: absolute;
+				        right: -8px;
+						bottom: -2px;
+					    // .rotation(-36deg);
+					}
+				}				
+			}
+			&:nth-of-type(2) {
+				display: inline-block;	
+				width: 30%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+					display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 116px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+				    bottom: -36px;
+				    left: 18%;
+				    margin-left: 0px;
+				    .rotation(40deg);
+					span {
+						position: absolute;
+					    top: -25px;
+						left: 60px;
+						.rotation(-40deg);
+					}
+					// &:after {
+					// 	content: "";
+					// }
+					.arrow-down {
+					  	width: 0; 
+					  	height: 0; 
+				      	border-left: 10px solid transparent;
+					    border-right: 10px solid transparent;
+					    border-top: 10px solid black;
+					    position: absolute;
+				        left: -12px;
+						bottom: -3px;
+					    // .rotation(36deg);
+					}
+				}				
+			}
+		}
 	}
 
-	.big-company:after {
-	    content: "";
-	    display: block;
-	    position: absolute;
-	    width: 0;
-	    height: 38px;
-	    border-left: 4px solid #000;
-	    z-index: 1;
-	    top: 170px;
-	    left: 50.3%;
-	    margin-left: -4px;
+	.big-company-4 {
+		&:after {
+			left: 50.2%;
+			top: auto;
+		    bottom: 186px;
+		}
+		> li {
+			&:nth-of-type(1) {
+				width: 30%;
+				margin-left: 10%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+					display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 62px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+				    bottom: -62px;
+    				left: 48%;
+				    margin-left: 0px;
+					// &:after {
+					// 	content: "";
+					    
+					// }
+				}
+			}
+			&:nth-of-type(2) {
+				display: inline-block;
+				width: 30%;
+				margin-right: 20%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+					display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 116px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+			        bottom: -36px;
+					left: 81%;
+				    margin-left: 0px;
+				    .rotation(-40deg);
+					span {
+						position: absolute;
+					    top: 26px;
+    					right: 11px;
+						.rotation(40deg);
+					}
+					// &:after {
+					// 	content: "";
+					// }
+					.arrow-down {
+					  	width: 0; 
+					  	height: 0; 
+				      	border-left: 10px solid transparent;
+					    border-right: 10px solid transparent;
+					    border-top: 10px solid black;
+					    position: absolute;
+				        right: -8px;
+						bottom: -2px;
+					    // .rotation(-36deg);
+					}
+				}				
+			}
+			&:nth-of-type(3) {
+				display: inline-block;	
+				width: 30%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+					display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 116px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+				    bottom: -36px;
+				    left: 18%;
+				    margin-left: 0px;
+				    .rotation(40deg);
+					span {
+						position: absolute;
+					    top: 23px;
+    					left: 14px;
+						.rotation(-40deg);
+					}
+					// &:after {
+					// 	content: "";
+					// }
+					.arrow-down {
+					  	width: 0; 
+					  	height: 0; 
+				      	border-left: 10px solid transparent;
+					    border-right: 10px solid transparent;
+					    border-top: 10px solid black;
+					    position: absolute;
+				        left: -12px;
+						bottom: -3px;
+					    // .rotation(36deg);
+					}
+				}				
+			}
+		}
 	}
-	.companies {
+
+	.big-company-5 {
+		&:after {
+			display: none!important;
+		}
+		> li {
+			&:nth-of-type(1) {
+				display: inline-block;
+				width: 30%;
+				margin-right: 20%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+			 	    display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 111px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+				    bottom: -31px;
+				    left: 82%;
+				    margin-left: 0px;
+				    .rotation(-40deg);
+					span {
+						position: absolute;
+				        top: 36px;
+						right: 15px;
+						.rotation(40deg);
+					}
+					// &:after {
+					// 	content: "";					   
+					// }
+					.arrow-down {
+					  	width: 0; 
+					  	height: 0; 
+				      	border-left: 10px solid transparent;
+					    border-right: 10px solid transparent;
+					    border-top: 10px solid black;
+					    position: absolute;
+				        right: -8px;
+    					bottom: -7px;
+					    // .rotation(-36deg);
+					}
+				}				
+			}
+			&:nth-of-type(2) {
+				display: inline-block;	
+				width: 30%;
+				a {
+					width: 100%;
+				}
+				.arrow {
+					display: block;
+				    position: absolute;
+				    width: 0;
+				    height: 110px;
+				    border-left: 4px solid #000;
+				    z-index: 1;
+			        bottom: -38px;
+					left: 43px;
+				    margin-left: 0px;
+				    .rotation(40deg);
+					span {
+						position: absolute;
+				        top: 25px;
+						left: 7px;
+						.rotation(-40deg);
+					}
+					// &:after {
+					// 	content: "";					    
+					// }
+					.arrow-up {
+					  	width: 0; 
+					  	height: 0; 
+				      	border-left: 10px solid transparent;
+					    border-right: 10px solid transparent;
+					    border-bottom: 10px solid black;
+					    position: absolute;
+				        left: -12px;
+    					top: -9px;
+					    // .rotation(36deg);
+					}
+				}				
+			}
+			ul.companies {
+				&:after {
+					display: none!important;
+				}
+				li.company {
+					&:before {
+						display: none!important;
+					}
+					.arrow {			
+						display: block;
+					    position: absolute;
+					    width: 0;						    
+					    border-left: 4px solid #000;
+					    z-index: 1;						    
+					    margin-left: 0px;						
+						span {
+							position: absolute;
+						}
+						.arrow-up {
+						  	width: 0; 
+						  	height: 0; 
+					      	border-left: 10px solid transparent;
+						    border-right: 10px solid transparent;
+						    border-bottom: 10px solid black;						    
+						}
+						.arrow-down {
+						  	width: 0; 
+						  	height: 0; 
+					      	border-left: 10px solid transparent;
+						    border-right: 10px solid transparent;
+						    border-top: 10px solid black;						    
+						}
+					}
+					&:nth-of-type(1) {
+						.arrow {
+							height: 110px;
+						    top: -98px;
+						    left: 87%;
+							.rotation(40deg);
+							span {
+						        top: 70px;
+								left: -50px;
+								.rotation(-40deg);
+							}
+							.arrow-down {
+							    position: absolute;
+							    right: -7px;
+    							bottom: -9px;
+							    // .rotation(36deg);
+							}
+						}
+					}	
+					&:nth-of-type(2) {
+						.arrow {
+							height: 50px;
+					        top: -60px;
+							left: 50%;
+							span {
+							    top: 10px;
+							    left: 10px;
+							}
+							.arrow-down {
+							    position: absolute;
+							    right: -8px;
+   							 	bottom: -10px;
+							}
+						}
+					}	
+					&:nth-of-type(3) {
+						.arrow {
+						    height: 112px;
+						    top: -92px;
+						    left: 17px;
+							.rotation(-40deg);
+							span {
+							    top: 65px;
+								left: 10px;
+    							.rotation(40deg);
+							}
+							.arrow-up {
+							    position: absolute;
+						        right: -8px;
+    							top: -4px;
+							    // .rotation(-214deg);
+							}
+						}
+					}	
+				}
+			}
+		}
+	}
+
+	ul.companies {
       	margin: 0 auto;
 	    text-align: center;
 	    width: 100%;
 	    padding-left: 0px;
 	    margin-left: -9px;
+	    &:after {
+			content: "";
+		    display: block;
+		    position: absolute;
+		    width: 52.2%;
+		    height: 22px;
+		    border-top: 4px solid #000;
+		    margin: 0 auto;
+		    top: -22px;
+		    left: 25%;   	    
+		}
 	}
-	.companies-2 {
+	ul.companies-2 {
 		margin-left: 0px;
-	}
-	.companies:after {
-		content: "";
-	    display: block;
-	    position: absolute;
-	    width: 52.2%;
-	    height: 22px;
-	    border-top: 4px solid #000;
-	    margin: 0 auto;
-	    top: -22px;
-	    left: 25%;   	    
-	}
-	.companies-2:after {
-		content: "";
-	    display: block;
-	    position: absolute;
-	    width: 72.2%;
-	    height: 22px;
-	    border-top: 4px solid #000;
-	    margin: 0 auto;
-	    top: -22px;
-	    left: 15%;
-	}
-
-	.company:before {
-      	content: "";
-	    display: block;
-	    position: absolute;
-	    width: 0;
-	    height: 22px;
-	    border-left: 4px solid #000;
-	    z-index: 1;
-	    top: -22px;
-	    left: 50%;
-	    margin-left: -4px;
+		&:after {
+			content: "";
+		    display: block;
+		    position: absolute;
+		    width: 72.2%;
+		    height: 22px;
+		    border-top: 4px solid #000;
+		    margin: 0 auto;
+		    top: -22px;
+		    left: 15%;
+		}
+	}	
+	ul.compaines-3 {
+		&:after {
+			content: "";
+		    display: block;
+		    position: absolute;
+		    width: 52.2%;
+		    height: 22px;
+		    border-top: 4px solid #000;
+		    margin: 0 auto;
+		    top: -22px;
+		    left: 25%;
+		}
 	}
 
-	.company {
+	li.company {
 	  	// border-left: 4px solid #000;
 	    width: 23%;
 	    display: inline-block;
 	    margin-bottom: 60px;
         margin-left: 21px;
+        &:before {
+	      	content: "";
+		    display: block;
+		    position: absolute;
+		    width: 0;
+		    height: 22px;
+		    border-left: 4px solid #000;
+		    z-index: 1;
+		    top: -22px;
+		    left: 50%;
+		    margin-left: -4px;
+		}
+		> a {
+		  margin: 0 0 -26px -4px;
+		  z-index: 1;
+		}
 	}
 
-	.company-2 {
+	li.company-2 {
 		width: 21%;
 	}
-
-	.company > a {
-	  margin: 0 0 -26px -4px;
-	  z-index: 1;
-	}	
 }
 
 .circle-container {
