--- a/wp-content/themes/manic-offshore-theme/css/xs-general.less
+++ b/wp-content/themes/manic-offshore-theme/css/xs-general.less
@@ -24,4 +24,28 @@ html, body {
 	.hidden-xs, .hidden-sm {
 		display: none;
 	}
+
+	.homepage-corporate-solutions-column {
+	  padding-left: 0px;
+	  margin-top: 40px;
+
+	  .mkdf-blog-list .mkdf-blog-list-item {
+	    height: 300px;
+	    .mkdf-item-text-holder .mkdf-excerpt {
+	      height: 300px;
+	    }
+	  }
+	}
+	.fit-text {
+		margin: 0px;
+	}
+	.offshore-finance-company {
+		.scale(0.6);
+		position: relative;
+	    left: -56%;
+	    margin: 0px;
+	    width: 220%;
+	    height: 450px;
+	    top: -50px;
+	}
 }
