--- a/wp-content/themes/manic-offshore-theme/css/xs-home.less
+++ b/wp-content/themes/manic-offshore-theme/css/xs-home.less
@@ -32,6 +32,11 @@
 						.mkdf-info-card-slider {
 							padding-top: 25px;
 						}
+
+					    .mkdf-btn.mkdf-btn-solid.custon-deploy-button.full-width {
+					      display: block;
+					      margin: 0px auto 20px auto;
+					    }
 					}
 
 					.homepage-corporate-solutions-column {
@@ -49,7 +54,7 @@
 									list-style-position: outside;
 								}
 							}
-						}	
+						}							
 					}
 					.vc_custom_1455183542356 {
 						background: none!important;
