--- a/b/css/offshore/admin.less
+++ b/b/css/offshore/admin.less
@@ -9,4 +9,29 @@
 			}
 		}
 	}	
+
+	.custom-table {
+		tr {
+			th {
+				&:nth-of-type(2){
+					width: 7%;
+				}
+				&:nth-of-type(3){
+					width: 14%;
+				}
+				&:nth-of-type(4) {
+					width: 18%;
+				}
+				&:nth-of-type(5) {
+					width: 18%;
+				}
+				&:nth-of-type(6) {
+					width: 6%;
+				}
+				&:nth-of-type(7) {
+					width: 6%;
+				}
+			}
+		}
+	}
 }
