--- a/wp-content/themes/manic-offshore-theme/css/page_home.less
+++ b/wp-content/themes/manic-offshore-theme/css/page_home.less
@@ -51,7 +51,6 @@ body.home{
 //      |_|   |____/ |_| |_____|_|    
 //                                    
 
-
 #homepage-icons-row{
   background: none!important;
   .owl-item{
@@ -77,7 +76,7 @@ body.home{
       margin-left: -10px;
       margin-top: -20px;
       // right: -20px;
-      right: -22px;
+      right: -24px;
       top: 50%;
       width: 40px;
       height: 40px;
@@ -89,6 +88,19 @@ body.home{
         display: none;
       }
     }
+
+    &:nth-of-type(2) {
+      .mkdf-info-card-slider-item {
+        .mkdf-info-card-front-side {
+          .mkdf-info-card-front-side-content {
+            p {
+              width: 205px;
+              margin-left: -15px;
+            }
+          }
+        }
+      } 
+    }
   }
 
   
@@ -99,6 +111,7 @@ body.home{
     padding-left: 0px;
     padding-right: 0px;
     p{
+
       //letter-spacing: -0.03em;
       // padding: 0 75px;
     }
@@ -173,18 +186,6 @@ body.home{
     }
   }
 }
-@media only screen and (max-width: 991px) {
-  #homepage-icons-row{
-    .mkdf-info-card-slider{
-      width: auto !important;
-      padding: 0 25px;
-    }
-  }
-  #homepage-icons-row .owl-item:before{
-    right: 10px;
-  }
-}
-
 
 
 //     ____ ___  ____  _____   ____  _____ ______     _____ ____ _____ ____  
@@ -224,49 +225,6 @@ body.home{
   }
 }
 
-@media only screen and (max-width:1400px){
-  #homepage-core-services-01,
-  #homepage-core-services-02{
-    h4.mkdf-boxes-item-title a{
-      font-size: 15px;
-    }
-  }
-
-}
-
-@media only screen and (max-width:1200px){
-  #homepage-core-services-01,
-  #homepage-core-services-02{
-    h4.mkdf-boxes-item-title a{
-      font-size: 12px;
-    }
-  }
-}
-
-@media only screen and (max-width:1024px){
-  #homepage-core-services-01,
-  #homepage-core-services-02{
-    .mkdf-btn-small{
-      display: none;
-    }
-  }
-  
-}
-
-@media only screen and (max-width: 991px) {
-
-  #homepage-core-services-01{
-    .vc_col-sm-2{
-      width: auto;
-    }
-    .mkdf-blog-box-whole-content{
-      margin-bottom: 30px;
-    }
-  }
-}
-
-
-
 
 //   __        ___   ___   __
 //   \ \      / / | | \ \ / /
@@ -296,11 +254,15 @@ body.home{
   margin-left: 0px;
   margin-right: 0px;
   overflow: hidden;
-  height: 300px;
+  // height: 300px;
 
   .homepage-why-column-version-04{
     padding-left: 30px;
     padding-right: 30px;
+    ul {
+      list-style: initial;
+      padding-left: 20px;
+    }
   }
   .homepage-why-column-version-05{
     .wpb_wrapper{
@@ -328,7 +290,7 @@ body.home{
     width: 391px;
     margin: 0 auto;
     background: #b1cfd4;
-    height: 370px;
+    height: 600px;
     z-index: 1;
   }
 
@@ -345,32 +307,6 @@ body.home{
     }
   }
 
-
-}
-
-
-
-@media only screen and (max-width: 991px) {
-
-  #homepage-why-version-03{
-    .homepage-why-column-version-04{
-      padding-left: 0px;
-      padding-right: 0px;
-      margin-bottom: 90px;
-    }
-    .homepage-why-column-version-05{
-      .wpb_wrapper{
-        z-index: 3;
-        position: relative;
-        margin-right: 0px;
-      }
-    }
-    .homepage-why-column-seperator{
-      left: 0px;
-      width: 100%;
-    }
-
-  }
 
 }
 
@@ -455,25 +391,6 @@ body.home{
   
 }
 
-
-
-@media only screen and (max-width: 991px) {
-  
-  #homepage-copy-row{
-    .homepage-copy-column-01{
-      padding-right: 0px;
-    }
-    .homepage-copy-column-02{
-      padding-left: 0px;
-    }
-    
-  }
-
-}
-
-
-
-
 //     ____ ___  ____  ____   ___  ____      _  _____ _____   ____   ___  _    _   _ _____ ___ ___  _   _ ____  
 //    / ___/ _ \|  _ \|  _ \ / _ \|  _ \    / \|_   _| ____| / ___| / _ \| |  | | | |_   _|_ _/ _ \| \ | / ___| 
 //   | |  | | | | |_) | |_) | | | | |_) |  / _ \ | | |  _|   \___ \| | | | |  | | | | | |  | | | | |  \| \___ \ 
@@ -515,7 +432,7 @@ body.home{
     .mkdf-blog-list-item{
       height: 200px;
       position: relative;
-      margin-bottom: 20px!important;
+      margin-bottom: 21px!important;
       overflow: hidden;
 
       .mkdf-item-image{
@@ -616,11 +533,8 @@ body.home{
 
     } // .mkdf-blog-list-item
   }
-}
 
-
-@media only screen and (max-width: 991px) {
-  .homepage-corporate-solutions-column{
-    padding-left: 0;
+  h3 {
+    width: 105%;
   }
 }
