--- a/b/css/offshore/forms.less
+++ b/b/css/offshore/forms.less
@@ -460,3 +460,11 @@ input.custom-input-class{
     color: lighten(#767676, 20%);
   }
 }
+
+#main-content {
+  .labels {
+    .row {
+      padding: 15px 0px;
+    }
+  }
+}
