--- a/wp-content/themes/manic-offshore-theme/css/sub_pages.less
+++ b/wp-content/themes/manic-offshore-theme/css/sub_pages.less
@@ -1031,3 +1031,9 @@ form.wpcf7-form {
 		margin-right: 0px!important;
 	}
 }
+
+.float-img {
+	float: right;
+    padding-bottom: 10px;
+    padding-left: 30px;
+}
