--- a/wp-content/themes/manic-offshore-theme/css/tablet-landscape-general.less
+++ b/wp-content/themes/manic-offshore-theme/css/tablet-landscape-general.less
@@ -7,9 +7,16 @@
 
   .homepage-corporate-solutions-column .mkdf-blog-list .mkdf-blog-list-item {
   	height: 120px;
+    margin-right: 25px;
+    min-width: 125px;
   }
 
   .home-page {
+    .homepage-corporate-solutions-column {
+      padding-left: 0px!important;
+      padding-top: 40px;
+      width: 100%;
+    }
     .mkdf-info-card-slider {
       margin-left: 40px;   
     }
@@ -136,7 +143,7 @@
   }
 
   .homepage-corporate-solutions-column {
-    display: none;
+    // display: none;
   }
   .homepage-why-column {
     width: 100%;
@@ -146,4 +153,12 @@
     .mkdf-wrapper {
       overflow: scroll;
     }
+  }
+
+  .mkdf-mobile-header .mkdf-mobile-nav .mobile_arrow {
+    line-height: 45px;
+  }
+
+  .mkdf-blog-carousel-boxes .mkdf-blog-boxes-item-holder-outer:hover {
+    transform: none;
   }
