--- a/wp-content/themes/manic-offshore-theme/css/xs-general.less
+++ b/wp-content/themes/manic-offshore-theme/css/xs-general.less
@@ -31,6 +31,7 @@ html, body {
 
 	  .mkdf-blog-list .mkdf-blog-list-item {
 	    height: 282px!important;
+	    width: 100%!important;
 	    .mkdf-item-text-holder .mkdf-excerpt {
 	      height: 282px!important;
 	    }
