--- a/b/css/offshore/admin.less
+++ b/b/css/offshore/admin.less
@@ -34,4 +34,28 @@
 			}
 		}
 	}
+	.custom-table-2 {
+		tr {
+			th {
+				&:nth-of-type(1){
+					width: 7%;
+				}
+				&:nth-of-type(2){
+					width: 14%;
+				}
+				&:nth-of-type(3) {
+					width: 18%;
+				}
+				&:nth-of-type(4) {
+					width: 6%;
+				}
+				&:nth-of-type(5) {
+					width: 8%;
+				}
+				&:nth-of-type(6) {
+					width: 6%;
+				}
+			}
+		}
+	}
 }
