--- a/wp-content/themes/manic-offshore-theme/css/footer.less
+++ b/wp-content/themes/manic-offshore-theme/css/footer.less
@@ -94,3 +94,16 @@ footer .widget .mkdf-icon-list-item:hover p{
     }
   }
 }
+
+#payment {
+  .owl-wrapper {
+    .owl-item {
+      width: 50%!important;
+      text-align: right!important;
+      .mkdf-carousel-second-image-holder {
+        right: 0px!important;
+      }
+    }
+
+  }  
+}
