--- a/wp-content/themes/manic-offshore-theme/css/forms.less
+++ b/wp-content/themes/manic-offshore-theme/css/forms.less
@@ -277,6 +277,9 @@
       visibility: hidden;
     }
   }
+  .field_person-code, .field_person-type, .field_passport-no, .field_passport-expiry, .field_tax-residence, .field_tax-number, .field_relationship-commenced, .field_relationship-ended, .field_passport-copy, .field_proof-of-address, .field_bank-reference, .field_professional-reference, .field_notes {
+    display: none;
+  }
 }
 
 /// profile edit form
@@ -311,6 +314,9 @@
 
     }
   }  
+  .field_person-code, .field_person-type, .field_passport-no, .field_passport-expiry, .field_tax-residence, .field_tax-number, .field_relationship-commenced, .field_relationship-ended, .field_passport-copy, .field_proof-of-address, .field_bank-reference, .field_professional-reference, .field_notes {
+    display: none;
+  }
 }
 
 
