--- a/wp-content/themes/manic-offshore-theme/css/mobile-general.less
+++ b/wp-content/themes/manic-offshore-theme/css/mobile-general.less
@@ -149,3 +149,9 @@
   .custom-input-container-left, .custom-input-container-right {
     width: 100%;
   }
+
+  div.blockUI.blockMsg.blockPage {
+    top: 25%!important;
+    width: 70%!important;
+    left: 5%!important;
+  }
