--- a/wp-content/themes/manic-offshore-theme/css/tablet-landscape-general.less
+++ b/wp-content/themes/manic-offshore-theme/css/tablet-landscape-general.less
@@ -162,3 +162,11 @@
   .mkdf-blog-carousel-boxes .mkdf-blog-boxes-item-holder-outer:hover {
     transform: none;
   }
+
+  .homepage-corporate-solutions-column .mkdf-blog-list .mkdf-blog-list-item:hover .mkdf-excerpt {
+    opacity: 0!important;
+  }
+
+  div.blockUI.blockMsg.blockPage {
+    top: 32%!important;
+  }
