--- a/b/css/style.css
+++ b/b/css/style.css
@@ -977,13 +977,169 @@ footer p {
   width: 18%;
 }
 #main-content .custom-table-2 tr th:nth-of-type(4) {
-  width: 6%;
+  width: 7%;
 }
 #main-content .custom-table-2 tr th:nth-of-type(5) {
   width: 8%;
 }
 #main-content .custom-table-2 tr th:nth-of-type(6) {
-  width: 6%;
+  width: 16%;
+}
+#main-content .jplist-panel .search-container {
+  text-align: right;
+  margin-bottom: 20px;
+}
+#main-content .jplist-panel .search-container input {
+  float: none;
+  width: 250px;
+  height: 40px;
+  padding-left: 15px;
+}
+#main-content .jplist-panel button.custom-submit-class {
+  text-shadow: none;
+  box-shadow: none;
+  color: #ffffff;
+  background: #008b9b;
+  font-size: 14px;
+  line-height: 1.7em;
+  height: 42px;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: 0px;
+  border-width: 2px;
+  border-radius: 30px;
+  cursor: pointer;
+  padding: 6px 30px;
+  border: 2px solid #08c;
+  border-color: #008b9b;
+  display: inline-block;
+  position: relative;
+  outline: 0;
+  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  -webkit-appearance: none;
+  margin-top: 7px;
+}
+#main-content .jplist-panel button.custom-submit-class:hover {
+  color: #646464;
+  background-color: #d8d8d8;
+  border-color: #d8d8d8;
+}
+#main-content .jplist-panel button.custom-submit-class.custom-submit-class-2 {
+  margin-top: 0px;
+  vertical-align: middle;
+}
+#main-content #edit_registered_company input[type="text"],
+#main-content #edit_client input[type="text"] {
+  width: 250px;
+  height: 30px;
+  font-size: 12px;
+  padding-left: 5px;
+}
+#main-content #edit_client fieldset {
+  border: 1px solid #c0c0c0!important;
+  margin: 10px -16px;
+  padding: 10px 20px;
+}
+#main-content #edit_client fieldset legend {
+  width: auto;
+}
+#main-content .each-director {
+  padding: 0px!important;
+  margin-bottom: 20px;
+}
+#main-content .each-director fieldset {
+  border: 1px solid #c0c0c0!important;
+  margin: 0 2px!important;
+  padding: 0.35em 0.625em 0.75em!important;
+}
+#main-content .each-director fieldset legend {
+  width: auto;
+}
+#main-content .each-director span {
+  font-size: 13px;
+  margin-bottom: 5px;
+  display: block;
+}
+#main-content .each-director span.fileinput-button {
+  display: inline-block;
+  padding: 0px;
+  margin-bottom: 0px;
+}
+#main-content .each-director label {
+  margin-right: 18px;
+  width: 130px;
+}
+#main-content .each-director .each-input {
+  margin-bottom: 10px;
+}
+#main-content .each-director .each-input input {
+  width: 250px;
+  height: 30px;
+  font-size: 12px;
+  padding-left: 5px;
+}
+#main-content .each-director .each-input .files {
+  padding-left: 160px;
+  width: 338px;
+}
+#main-content .each-director .each-input .files p {
+  font-size: 12px;
+  text-align: center;
+}
+#main-content .each-director .each-input span {
+  display: inline-block;
+}
+#main-content fieldset.persons {
+  border: 1px solid #c0c0c0;
+  margin: 0 2px;
+  padding: 10px 30px;
+  margin-bottom: 30px;
+}
+#main-content fieldset.persons legend {
+  padding-left: 10px;
+  width: auto;
+  padding-right: 10px;
+}
+#main-content fieldset.persons:last-child {
+  margin-bottom: 0px;
+}
+#main-content .pdf_files {
+  padding-left: 32px;
+}
+#main-content .fileinput-button {
+  padding-left: 0px;
+}
+#main-content .fileinput-button input {
+  height: 50px;
+}
+#main-content .valign {
+  vertical-align: middle;
+  float: none;
+  display: inline-block;
+}
+#main-content .align-text {
+  padding-top: 5px;
+}
+#main-content .align-text-2 {
+  padding-top: 20px;
+}
+input.error::-webkit-input-placeholder,
+textarea.error::-webkit-input-placeholder {
+  color: red!important;
+}
+input.error:-moz-placeholder,
+textarea.error:-moz-placeholder {
+  color: red!important;
+}
+input.error::-moz-placeholder,
+textarea.error::-moz-placeholder {
+  color: red!important;
+}
+input.error:-ms-input-placeholder,
+textarea.error:-ms-input-placeholder {
+  color: red!important;
 }
 .custom-form-message {
   width: 100%;
@@ -1335,4 +1491,32 @@ input.custom-input-class:-ms-input-placeholder {
 }
 #main-content .labels .row {
   padding: 15px 0px;
+}
+@media only print {
+  body {
+    font-family: Georgia, serif;
+    background: none;
+    color: black;
+  }
+  a[href]:after {
+    content: none !important;
+  }
+  img[src]:after {
+    content: none !important;
+  }
+  .heading {
+    display: none!important;
+  }
+  .labels .row .col-md-4 {
+    display: inline-block;
+  }
+  .labels .row .col-md-8 {
+    display: inline-block;
+  }
+  #footer {
+    display: none;
+  }
+  fieldset {
+    margin-top: 20px;
+  }
 }
